retitled col 2, updated first sets of tasks

--- a/CEG4912-gantt-chart/index.html
+++ b/CEG4912-gantt-chart/index.html
@@ -61,98 +61,100 @@
         chart.draw();
 
         chart.dataGrid().column(1).width(400);
+        // configure the title of the first data grid column
+        var column_1 = chart.dataGrid().column(0);
+        column_1.title().enabled(false);
 
-        // configure the levels of the timeline header
-        var header = chart.getTimeline().header();
-        header.level(0).format("{%tickValue}{dateTimeFormat:dd MMM}");
-        header.level(1).format("{%value}");
-        header.level(2).format("{%value}-{%endValue}");
+        // configure the title of the second data grid column
+        var column_2 = chart.dataGrid().column(1);
+        column_2.title().text("CEG4912 Diet Tracker (Group 12)");
+        column_2.title().fontColor("#1A76D2");
+        column_2.title().fontWeight(600);
       });
 
       function getData() {
         return [
           {
             id: "1",
-            name: "Phase 1 - Strategic Plan",
-            progressValue: "14%",
+            name: "Software Development",
+            //progressValue: "100%",
             actualStart: Date.UTC(2020, 8, 1),
             actualEnd: Date.UTC(2020, 11, 15),
           },
           {
             id: "2",
-            name: "Self-Assessment",
+            name: "Mobile App Development",
             parent: "1",
-            progressValue: "25%",
-            actualStart: 951350400000,
-            actualEnd: 951955200000,
+
+            //progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 8),
+            actualEnd: Date.UTC(2020, 11, 15),
+            connectTo: "4",
+            connectorType: "start-start",
           },
           {
             id: "3",
-            name: "Define business vision",
-            parent: "2",
-            progressValue: "0%",
-            actualStart: 951408000000,
-            actualEnd: 951440400000,
-            connectTo: "4",
-            connectorType: "finish-start",
+            name: "A.I. Development",
+            parent: "1",
+            //progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 8),
+            actualEnd: Date.UTC(2020, 11, 15),
           },
           {
             id: "4",
-            name: "Identify available skills, information and support",
+            name: "UI/UX Design",
             parent: "2",
-            progressValue: "0%",
-            actualStart: 951494400000,
-            actualEnd: 951526800000,
-            connectTo: "5",
-            connectorType: "finish-start",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 15),
+            actualEnd: Date.UTC(2020, 9, 1),
+            connectTo: "7",
+            connectorType: "start-start",
           },
           {
             id: "5",
-            name: "Decide whether to proceed",
+            name: "Front End Development",
             parent: "2",
             progressValue: "0%",
             actualStart: 951753600000,
             actualEnd: 951786000000,
-            connectTo: "7",
-            connectorType: "finish-start",
+            //connectTo: "7",
+            connectorType: "start-start",
           },
           {
             id: "6",
-            name: "Define the Opportunity",
-            parent: "1",
+            name: "Back End Development",
+            parent: "2",
             progressValue: "27%",
             actualStart: 951782400000,
             actualEnd: 952992000000,
           },
           {
             id: "7",
-            name: "Research the market and competition",
-            parent: "6",
-            progressValue: "0%",
-            actualStart: 951840000000,
-            actualEnd: 951872400000,
-            connectTo: "8",
-            connectorType: "finish-start",
+            name: "Plan Features",
+            parent: "4",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 15),
+            actualEnd: Date.UTC(2020, 8, 19),
           },
           {
             id: "8",
-            name: "Interview owners of similar businesses",
-            parent: "6",
-            progressValue: "60%",
-            actualStart: 951868800000,
-            actualEnd: 952473600000,
+            name: "Sketch Prototyping",
+            parent: "4",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 19),
+            actualEnd: Date.UTC(2020, 8, 21),
             connectTo: "9",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "9",
-            name: "Identify needed resources",
-            parent: "6",
-            progressValue: "0%",
-            actualStart: 952531200000,
-            actualEnd: 952650000000,
+            name: "Figma Wireframe Prototyping",
+            parent: "4",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 19),
+            actualEnd: Date.UTC(2020, 8, 21),
             connectTo: "10",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "10",
@@ -162,7 +164,7 @@
             actualStart: 952704000000,
             actualEnd: 952995600000,
             connectTo: "12",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "11",
@@ -180,7 +182,7 @@
             actualStart: 953049600000,
             actualEnd: 953082000000,
             connectTo: "17",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "13",
@@ -190,7 +192,7 @@
             actualStart: 953136000000,
             actualEnd: 953168400000,
             connectTo: "14",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "14",
@@ -200,7 +202,7 @@
             actualStart: 953222400000,
             actualEnd: 953254800000,
             connectTo: "15",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "15",
@@ -210,7 +212,7 @@
             actualStart: 953308800000,
             actualEnd: 953341200000,
             connectTo: "21",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "16",
@@ -228,7 +230,7 @@
             actualStart: 953136000000,
             actualEnd: 953254800000,
             connectTo: "18",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "18",
@@ -238,7 +240,7 @@
             actualStart: 953308800000,
             actualEnd: 953341200000,
             connectTo: "19",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "19",
@@ -248,7 +250,7 @@
             actualStart: 953740800000,
             actualEnd: 953859600000,
             connectTo: "20",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "20",
@@ -266,7 +268,7 @@
             actualStart: 953568000000,
             actualEnd: 953686800000,
             connectTo: "22",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "22",
@@ -276,7 +278,7 @@
             actualStart: 953740800000,
             actualEnd: 953773200000,
             connectTo: "23",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "23",
@@ -286,7 +288,7 @@
             actualStart: 953827200000,
             actualEnd: 953859600000,
             connectTo: "24",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "24",
@@ -296,7 +298,7 @@
             actualStart: 953913600000,
             actualEnd: 954208800000,
             connectTo: "25",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "25",
@@ -306,7 +308,7 @@
             actualStart: 954208800000,
             actualEnd: 954208800000,
             connectTo: "28",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "26",
@@ -349,7 +351,7 @@
             actualStart: 954460800000,
             actualEnd: 955065600000,
             connectTo: "31",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "31",
@@ -359,7 +361,7 @@
             actualStart: 955065600000,
             actualEnd: 955411200000,
             connectTo: "32",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "32",
@@ -369,7 +371,7 @@
             actualStart: 955472400000,
             actualEnd: 955591200000,
             connectTo: "33",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "33",
@@ -398,7 +400,7 @@
             actualStart: 955645200000,
             actualEnd: 955764000000,
             connectTo: "36",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "36",
@@ -408,7 +410,7 @@
             actualStart: 955990800000,
             actualEnd: 956023200000,
             connectTo: "37",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "37",
@@ -418,7 +420,7 @@
             actualStart: 956077200000,
             actualEnd: 956109600000,
             connectTo: "38",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "38",
@@ -428,7 +430,7 @@
             actualStart: 956163600000,
             actualEnd: 956196000000,
             connectTo: "39",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "39",
@@ -438,7 +440,7 @@
             actualStart: 956250000000,
             actualEnd: 956282400000,
             connectTo: "40",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "40",
@@ -448,7 +450,7 @@
             actualStart: 956336400000,
             actualEnd: 956368800000,
             connectTo: "42",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
           {
             id: "41",
@@ -466,7 +468,7 @@
             actualStart: 956534400000,
             actualEnd: 956707200000,
             connectTo: "43",
-            connectorType: "finish-start",
+            connectorType: "start-start",
           },
         ];
       }
