final fixture for connector

--- a/CEG4912-gantt-chart/index.html
+++ b/CEG4912-gantt-chart/index.html
@@ -121,16 +121,16 @@
             progressValue: "0%",
             actualStart: Date.UTC(2020, 9, 3),
             actualEnd: Date.UTC(2020, 10, 15),
-            //connectTo: "7",
-            connectorType: "start-start",
+            // connectTo: "2",
+            // connectorType: "start-start",
           },
           {
             id: "6",
             name: "Back End Development",
             parent: "2",
             progressValue: "27%",
-            actualStart: 951782400000,
-            actualEnd: 952992000000,
+            actualStart: Date.UTC(2020, 9, 3),
+            actualEnd: Date.UTC(2020, 10, 15),
           },
           {
             id: "7",
@@ -164,51 +164,53 @@
           },
           {
             id: "10",
-            name: "Identify operating cost elements",
-            parent: "6",
-            progressValue: "0%",
-            actualStart: 952704000000,
-            actualEnd: 952995600000,
-            connectTo: "12",
-            connectorType: "start-start",
+            name: "Implement Pages",
+            parent: "5",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 3),
+            actualEnd: Date.UTC(2020, 10, 3),
+            // connectTo: "5",
+            // connectorType: "start-start",
           },
           {
             id: "11",
-            name: "Evaluate Business Approach",
-            parent: "1",
-            progressValue: "0%",
-            actualStart: 953049600000,
-            actualEnd: 953341200000,
+            name: "Login Page",
+            parent: "10",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 3),
+            actualEnd: Date.UTC(2020, 10, 3),
+            // connectTo: "5",
+            // connectorType: "start-start",
           },
           {
             id: "12",
-            name: "Define new entity requirements",
-            parent: "11",
-            progressValue: "0%",
-            actualStart: 953049600000,
-            actualEnd: 953082000000,
-            connectTo: "17",
-            connectorType: "start-start",
+            name: "Home Page",
+            parent: "10",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 3),
+            actualEnd: Date.UTC(2020, 10, 3),
+            // connectTo: "5",
+            // connectorType: "start-start",
           },
           {
             id: "13",
-            name: "Identify on-going business purchase opportunities",
-            parent: "11",
-            progressValue: "0%",
-            actualStart: 953136000000,
-            actualEnd: 953168400000,
-            connectTo: "14",
-            connectorType: "start-start",
+            name: "Food Log Page",
+            parent: "10",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 3),
+            actualEnd: Date.UTC(2020, 10, 3),
+            // connectTo: "5",
+            // connectorType: "start-start",
           },
           {
             id: "14",
-            name: "Research franchise possibilities",
-            parent: "11",
-            progressValue: "0%",
-            actualStart: 953222400000,
-            actualEnd: 953254800000,
-            connectTo: "15",
-            connectorType: "start-start",
+            name: "Implement Functionalies",
+            parent: "5",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 3),
+            actualEnd: Date.UTC(2020, 10, 3),
+            // connectTo: "10",
+            // connectorType: "start-start",
           },
           {
             id: "15",
