added more tasks, fixed timing

--- a/CEG4912-gantt-chart/index.html
+++ b/CEG4912-gantt-chart/index.html
@@ -120,7 +120,7 @@
             parent: "2",
             progressValue: "0%",
             actualStart: Date.UTC(2020, 9, 3),
-            actualEnd: Date.UTC(2020, 10, 15),
+            actualEnd: Date.UTC(2020, 11, 3),
             // connectTo: "2",
             // connectorType: "start-start",
           },
@@ -129,8 +129,8 @@
             name: "Back End Development",
             parent: "2",
             progressValue: "27%",
-            actualStart: Date.UTC(2020, 9, 3),
-            actualEnd: Date.UTC(2020, 10, 15),
+            actualStart: Date.UTC(2020, 9, 15),
+            actualEnd: Date.UTC(2020, 11, 3),
           },
           {
             id: "7",
@@ -167,7 +167,7 @@
             name: "Implement Pages",
             parent: "5",
             progressValue: "100%",
-            actualStart: Date.UTC(2020, 9, 3),
+            actualStart: Date.UTC(2020, 9, 15),
             actualEnd: Date.UTC(2020, 10, 3),
             // connectTo: "5",
             // connectorType: "start-start",
@@ -177,7 +177,7 @@
             name: "Login Page",
             parent: "10",
             progressValue: "100%",
-            actualStart: Date.UTC(2020, 9, 3),
+            actualStart: Date.UTC(2020, 9, 15),
             actualEnd: Date.UTC(2020, 10, 3),
             // connectTo: "5",
             // connectorType: "start-start",
@@ -187,7 +187,7 @@
             name: "Home Page",
             parent: "10",
             progressValue: "100%",
-            actualStart: Date.UTC(2020, 9, 3),
+            actualStart: Date.UTC(2020, 9, 15),
             actualEnd: Date.UTC(2020, 10, 3),
             // connectTo: "5",
             // connectorType: "start-start",
@@ -197,7 +197,7 @@
             name: "Food Log Page",
             parent: "10",
             progressValue: "100%",
-            actualStart: Date.UTC(2020, 9, 3),
+            actualStart: Date.UTC(2020, 9, 15),
             actualEnd: Date.UTC(2020, 10, 3),
             // connectTo: "5",
             // connectorType: "start-start",
@@ -207,66 +207,70 @@
             name: "Implement Functionalies",
             parent: "5",
             progressValue: "100%",
-            actualStart: Date.UTC(2020, 9, 3),
+            actualStart: Date.UTC(2020, 9, 15),
             actualEnd: Date.UTC(2020, 10, 3),
             // connectTo: "10",
             // connectorType: "start-start",
           },
           {
             id: "15",
-            name: "Summarize business approach",
-            parent: "11",
-            progressValue: "0%",
-            actualStart: 953308800000,
-            actualEnd: 953341200000,
-            connectTo: "21",
-            connectorType: "start-start",
+            name: "Display Information",
+            parent: "5",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 15),
+            actualEnd: Date.UTC(2020, 10, 25),
+            // connectTo: "10",
+            // connectorType: "start-start",
           },
           {
             id: "16",
-            name: "Evaluate Potential Risks and Rewards",
-            parent: "1",
-            progressValue: "0%",
-            actualStart: 953136000000,
-            actualEnd: 953946000000,
+            name: "Connect to DB (Firestore)",
+            parent: "6",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 15),
+            actualEnd: Date.UTC(2020, 9, 12),
+            connectTo: "17",
+            connectorType: "finish-start",
           },
           {
             id: "17",
-            name: "Assess market size and stability",
-            parent: "16",
-            progressValue: "0%",
-            actualStart: 953136000000,
-            actualEnd: 953254800000,
-            connectTo: "18",
-            connectorType: "start-start",
+            name: "Obtain Fruit Classification",
+            parent: "6",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 15),
+            actualEnd: Date.UTC(2020, 9, 18),
+            // connectTo: "10",
+            // connectorType: "start-start",
           },
           {
             id: "18",
-            name: "Estimate the competition",
-            parent: "16",
-            progressValue: "0%",
-            actualStart: 953308800000,
-            actualEnd: 953341200000,
-            connectTo: "19",
-            connectorType: "start-start",
+            name: "Obtain Weight",
+            parent: "6",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 18),
+            actualEnd: Date.UTC(2020, 11, 3),
+            // connectTo: "6",
+            // connectorType: "start-finish",
           },
           {
             id: "19",
-            name: "Assess needed resource availability",
-            parent: "16",
-            progressValue: "0%",
-            actualStart: 953740800000,
-            actualEnd: 953859600000,
-            connectTo: "20",
-            connectorType: "start-start",
+            name: "Nutrient Calculation (API)",
+            parent: "6",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 15),
+            actualEnd: Date.UTC(2020, 11, 3),
+            // connectTo: "10",
+            // connectorType: "start-start",
           },
           {
             id: "20",
-            name: "Evaluate realistic initial market share",
-            parent: "16",
-            progressValue: "0%",
-            actualStart: 953913600000,
-            actualEnd: 953946000000,
+            name: "Send Nutrient Calcuations to Front End",
+            parent: "6",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 15),
+            actualEnd: Date.UTC(2020, 11, 3),
+            // connectTo: "10",
+            // connectorType: "start-start",
           },
           {
             id: "21",
