added more tasks. Deleted tasks

--- a/CEG4912-gantt-chart/index.html
+++ b/CEG4912-gantt-chart/index.html
@@ -274,213 +274,73 @@
           },
           {
             id: "21",
-            name: "Determine financial requirements",
-            parent: "16",
-            progressValue: "0%",
-            actualStart: 953568000000,
-            actualEnd: 953686800000,
-            connectTo: "22",
-            connectorType: "start-start",
+            name: "Obtain Dataset",
+            parent: "3",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 8),
+            actualEnd: Date.UTC(2020, 9, 1),
+            // connectTo: "22",
+            // connectorType: "finish-start",
           },
           {
             id: "22",
-            name: "Review personal suitability",
-            parent: "16",
-            progressValue: "0%",
-            actualStart: 953740800000,
-            actualEnd: 953773200000,
+            name: "Obtain Dataset from Kaggle",
+            parent: "21",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 15),
+            actualEnd: Date.UTC(2020, 8, 18),
             connectTo: "23",
-            connectorType: "start-start",
+            connectorType: "finish-start",
           },
           {
             id: "23",
-            name: "Evaluate initial profitability",
-            parent: "16",
-            progressValue: "0%",
-            actualStart: 953827200000,
-            actualEnd: 953859600000,
+            name: "Clean / Transform Data",
+            parent: "21",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 18),
+            actualEnd: Date.UTC(2020, 8, 25),
             connectTo: "24",
-            connectorType: "start-start",
+            connectorType: "finish-start",
           },
           {
             id: "24",
-            name: "Review and modify the strategic plan",
-            parent: "1",
-            progressValue: "0%",
-            actualStart: 953913600000,
-            actualEnd: 954208800000,
-            connectTo: "25",
-            connectorType: "start-start",
+            name: "Image Classification Model Development",
+            parent: "3",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 25),
+            actualEnd: Date.UTC(2020, 10, 15),
+            // connectTo: "22",
+            // connectorType: "start-start",
           },
           {
             id: "25",
-            name: "Confirm decision to proceed",
-            parent: "1",
-            progressValue: "0%",
-            actualStart: 954208800000,
-            actualEnd: 954208800000,
-            connectTo: "28",
-            connectorType: "start-start",
+            name: "Split data into training/testing sets.",
+            parent: "24",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 25),
+            actualEnd: Date.UTC(2020, 8, 26),
+            connectTo: "26",
+            connectorType: "finish-start",
           },
           {
             id: "26",
-            name: "Phase 2 - Define the Business Opportunity",
-            progressValue: "19%",
-            actualStart: 954201600000,
-            actualEnd: 957312000000,
+            name: "Train/Test Models (increments 10 fruits/week)",
+            parent: "24",
+            progressValue: "80%",
+            actualStart: Date.UTC(2020, 8, 26),
+            actualEnd: Date.UTC(2020, 9, 20),
+            // connectTo: "22",
+            // connectorType: "start-start",
           },
           {
             id: "27",
-            name: "Define the Market",
-            parent: "26",
-            progressValue: "28%",
-            actualStart: 954201600000,
-            actualEnd: 955670400000,
-          },
-          {
-            id: "28",
-            name: "Access available information",
-            parent: "27",
-            progressValue: "0%",
-            actualStart: 954262800000,
-            actualEnd: 954295200000,
-            connectTo: "35",
-            connectorType: "start-start",
-          },
-          {
-            id: "29",
-            name: "Create market analysis plan",
-            parent: "27",
-            progressValue: "0%",
-            actualStart: 954349200000,
-            actualEnd: 954468000000,
-          },
-          {
-            id: "30",
-            name: "Implement market analysis plan",
-            parent: "27",
-            progressValue: "40%",
-            actualStart: 954460800000,
-            actualEnd: 955065600000,
-            connectTo: "31",
-            connectorType: "start-start",
-          },
-          {
-            id: "31",
-            name: "Identify competition",
-            parent: "27",
-            progressValue: "60%",
-            actualStart: 955065600000,
-            actualEnd: 955411200000,
-            connectTo: "32",
-            connectorType: "start-start",
-          },
-          {
-            id: "32",
-            name: "Summarize the market",
-            parent: "27",
-            progressValue: "0%",
-            actualStart: 955472400000,
-            actualEnd: 955591200000,
-            connectTo: "33",
-            connectorType: "start-start",
-          },
-          {
-            id: "33",
-            name: "Identify target market niche",
-            parent: "27",
-            progressValue: "0%",
-            actualStart: 955645200000,
-            actualEnd: 955677600000,
-            connectTo: "35",
-            connectorType: "start-start",
-          },
-          {
-            id: "34",
-            name: "Identify Needed Materials and Supplies",
-            parent: "26",
-            progressValue: "0%",
-            actualStart: 955645200000,
-            actualEnd: 956368800000,
-          },
-          {
-            id: "35",
-            name:
-              "Select a business approach (from 'Evaluate Business Approach' above)",
-            parent: "34",
-            progressValue: "0%",
-            actualStart: 955645200000,
-            actualEnd: 955764000000,
-            connectTo: "36",
-            connectorType: "start-start",
-          },
-          {
-            id: "36",
-            name: "Identify management staff resources",
-            parent: "34",
-            progressValue: "0%",
-            actualStart: 955990800000,
-            actualEnd: 956023200000,
-            connectTo: "37",
-            connectorType: "start-start",
-          },
-          {
-            id: "37",
-            name: "Identify staffing requirements",
-            parent: "34",
-            progressValue: "0%",
-            actualStart: 956077200000,
-            actualEnd: 956109600000,
-            connectTo: "38",
-            connectorType: "start-start",
-          },
-          {
-            id: "38",
-            name: "Identify needed raw materials",
-            parent: "34",
-            progressValue: "0%",
-            actualStart: 956163600000,
-            actualEnd: 956196000000,
-            connectTo: "39",
-            connectorType: "start-start",
-          },
-          {
-            id: "39",
-            name: "Identify needed utilities",
-            parent: "34",
-            progressValue: "0%",
-            actualStart: 956250000000,
-            actualEnd: 956282400000,
-            connectTo: "40",
-            connectorType: "start-start",
-          },
-          {
-            id: "40",
-            name: "Summarize operating expenses and financial projections",
-            parent: "34",
-            progressValue: "0%",
-            actualStart: 956336400000,
-            actualEnd: 956368800000,
-            connectTo: "42",
-            connectorType: "start-start",
-          },
-          {
-            id: "41",
-            name: "Evaluate Potential Risks and Rewards",
-            parent: "26",
-            progressValue: "17%",
-            actualStart: 956534400000,
-            actualEnd: 957225600000,
-          },
-          {
-            id: "42",
-            name: "Assess market size and stability",
-            parent: "41",
-            progressValue: "50%",
-            actualStart: 956534400000,
-            actualEnd: 956707200000,
-            connectTo: "43",
-            connectorType: "start-start",
+            name: "Max Pool CNN Hidden Layers",
+            parent: "24",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 26),
+            actualEnd: Date.UTC(2020, 9, 20),
+            connectTo: "26",
+            connectorType: "finish-finish",
           },
         ];
       }
