--- a/CEG4912-gantt-chart/index.html
+++ b/CEG4912-gantt-chart/index.html
@@ -70,6 +70,23 @@
         column_2.title().text("CEG4912 Diet Tracker (Group 12)");
         column_2.title().fontColor("#1A76D2");
         column_2.title().fontWeight(600);
+
+        // configure the visual settings of the data grid
+        var dataGrid = chart.dataGrid();
+        // dataGrid.rowEvenFill("gray 0.3");
+        // dataGrid.rowOddFill("gray 0.1");
+        dataGrid.rowHoverFill("#ffd54f 0.3");
+        dataGrid.rowSelectedFill("#ffd54f 0.3");
+        //dataGrid.columnStroke("2 #64b5f6");
+        //dataGrid.headerFill("#64b5f6 0.2");
+
+        // configure the visual settings of the timeline
+        var timeline = chart.getTimeline();
+        // timeline.rowEvenFill("gray 0.3");
+        // timeline.rowOddFill("gray 0.1");
+        timeline.rowHoverFill("#ffd54f 0.3");
+        timeline.rowSelectedFill("#ffd54f 0.3");
+        // timeline.columnStroke(null);
       });
 
       // Connector With example below:
@@ -83,7 +100,7 @@
           {
             id: "1",
             name: "Software Development",
-            //progressValue: "100%",
+            progressValue: "95%",
             actualStart: Date.UTC(2020, 8, 1),
             actualEnd: Date.UTC(2020, 11, 15),
           },
@@ -91,8 +108,7 @@
             id: "2",
             name: "Mobile App Development",
             parent: "1",
-
-            //progressValue: "100%",
+            progressValue: "90%",
             actualStart: Date.UTC(2020, 8, 8),
             actualEnd: Date.UTC(2020, 11, 15),
           },
@@ -100,7 +116,7 @@
             id: "3",
             name: "A.I. Development",
             parent: "1",
-            //progressValue: "100%",
+            progressValue: "95%",
             actualStart: Date.UTC(2020, 8, 8),
             actualEnd: Date.UTC(2020, 11, 15),
           },
@@ -118,7 +134,7 @@
             id: "5",
             name: "Front End Development",
             parent: "2",
-            progressValue: "0%",
+            progressValue: "100%",
             actualStart: Date.UTC(2020, 9, 3),
             actualEnd: Date.UTC(2020, 11, 3),
             // connectTo: "2",
@@ -128,7 +144,7 @@
             id: "6",
             name: "Back End Development",
             parent: "2",
-            progressValue: "27%",
+            progressValue: "80%",
             actualStart: Date.UTC(2020, 9, 15),
             actualEnd: Date.UTC(2020, 11, 3),
           },
@@ -272,6 +288,7 @@
             // connectTo: "10",
             // connectorType: "start-start",
           },
+          // A.I. Development
           {
             id: "21",
             name: "Obtain Dataset",
@@ -324,11 +341,11 @@
           },
           {
             id: "26",
-            name: "Train/Test Models (increments 10 fruits/week)",
+            name: "Train/Test Models",
             parent: "24",
             progressValue: "80%",
             actualStart: Date.UTC(2020, 8, 26),
-            actualEnd: Date.UTC(2020, 9, 20),
+            actualEnd: Date.UTC(2020, 10, 15),
             // connectTo: "22",
             // connectorType: "start-start",
           },
@@ -338,9 +355,130 @@
             parent: "24",
             progressValue: "100%",
             actualStart: Date.UTC(2020, 8, 26),
+            actualEnd: Date.UTC(2020, 9, 5),
+            connectTo: "28",
+            connectorType: "finish-start",
+          },
+          {
+            id: "28",
+            name: "Validate Model",
+            parent: "24",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 5),
             actualEnd: Date.UTC(2020, 9, 20),
-            connectTo: "26",
-            connectorType: "finish-finish",
+            connectTo: "29",
+            connectorType: "finish-start",
+          },
+          {
+            id: "29",
+            name: "Visualize Model Accurary",
+            parent: "24",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 20),
+            actualEnd: Date.UTC(2020, 9, 23),
+            // connectTo: "26",
+            // connectorType: "finish-finish",
+          },
+          {
+            id: "30",
+            name: "Connect to Firestore",
+            parent: "24",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 23),
+            actualEnd: Date.UTC(2020, 9, 30),
+            // connectTo: "26",
+            // connectorType: "finish-finish",
+          },
+          {
+            id: "31",
+            name: "Connect to Raspberry Pi 4",
+            parent: "24",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 23),
+            actualEnd: Date.UTC(2020, 9, 30),
+            // connectTo: "26",
+            // connectorType: "finish-finish",
+          },
+          // Hardware Development
+          {
+            id: "32",
+            name: "Hardware Implementation",
+            progressValue: "90%",
+            actualStart: Date.UTC(2020, 8, 1),
+            actualEnd: Date.UTC(2020, 11, 15),
+          },
+          {
+            id: "33",
+            name: "GPU (Desktop)",
+            parent: "32",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 26),
+            actualEnd: Date.UTC(2020, 10, 15),
+            // connectTo: "26",
+            // connectorType: "start-start",
+          },
+          {
+            id: "34",
+            name: "Train Image Classification Models",
+            parent: "33",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 26),
+            actualEnd: Date.UTC(2020, 10, 15),
+            // connectTo: "26",
+            // connectorType: "start-start",
+          },
+          {
+            id: "35",
+            name: "Test Image Classification Models",
+            parent: "33",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 26),
+            actualEnd: Date.UTC(2020, 10, 15),
+            // connectTo: "26",
+            // connectorType: "start-start",
+          },
+          {
+            id: "36",
+            name: "Raspberry Pi 4",
+            parent: "32",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 26),
+            actualEnd: Date.UTC(2020, 10, 15),
+            // connectTo: "26",
+            // connectorType: "start-start",
+          },
+          {
+            id: "37",
+            name: "Connect Camera",
+            parent: "36",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 26),
+            actualEnd: Date.UTC(2020, 8, 30),
+            connectTo: "38",
+            connectorType: "finish-start",
+          },
+          {
+            id: "38",
+            name: "Connect Camera Feed with Keras",
+            parent: "37",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 30),
+            actualEnd: Date.UTC(2020, 9, 15),
+            // connectTo: "26",
+            // connectorType: "start-start",
+          },
+          {
+            id: "37",
+            name: "Connect Weight Sensors",
+            parent: "36",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 10),
+            actualEnd: Date.UTC(2020, 10, 20),
+            // connectTo: "38",
+            // connectorType: "finish-start",
+          },
+          {
+            id: "100",
           },
         ];
       }
