added all tasks - timing needs to be updated

--- a/CEG4912-gantt-chart/index.html
+++ b/CEG4912-gantt-chart/index.html
@@ -325,7 +325,7 @@
             parent: "3",
             progressValue: "100%",
             actualStart: Date.UTC(2020, 8, 25),
-            actualEnd: Date.UTC(2020, 10, 15),
+            actualEnd: Date.UTC(2020, 10, 25),
             // connectTo: "22",
             // connectorType: "start-start",
           },
@@ -345,7 +345,7 @@
             parent: "24",
             progressValue: "80%",
             actualStart: Date.UTC(2020, 8, 26),
-            actualEnd: Date.UTC(2020, 10, 15),
+            actualEnd: Date.UTC(2020, 10, 20),
             // connectTo: "22",
             // connectorType: "start-start",
           },
@@ -459,21 +459,41 @@
           },
           {
             id: "38",
-            name: "Connect Camera Feed with Keras",
+            name: "Connect Camera Feed",
             parent: "37",
             progressValue: "100%",
             actualStart: Date.UTC(2020, 8, 30),
-            actualEnd: Date.UTC(2020, 9, 15),
+            actualEnd: Date.UTC(2020, 9, 5),
+            connectTo: "39",
+            connectorType: "finish-start",
+          },
+          {
+            id: "39",
+            name: "Classify Image using Keras",
+            parent: "37",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 5),
+            actualEnd: Date.UTC(2020, 9, 20),
             // connectTo: "26",
             // connectorType: "start-start",
           },
           {
-            id: "37",
+            id: "40",
             name: "Connect Weight Sensors",
             parent: "36",
             progressValue: "100%",
             actualStart: Date.UTC(2020, 9, 10),
             actualEnd: Date.UTC(2020, 10, 20),
+            // connectTo: "38",
+            // connectorType: "finish-start",
+          },
+          {
+            id: "41",
+            name: "Upload Trained Image Classification Model to Raspberry Pi 4",
+            parent: "33",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 10, 25),
+            actualEnd: Date.UTC(2020, 10, 30),
             // connectTo: "38",
             // connectorType: "finish-start",
           },
